Fixed some errors

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,25 +1,27 @@
 <% if (title) { %>
-    <h1 class="login-title">
-        <%= title %>
-    </h1>
-    <% } else { %>
-        <h1 class="login-title">Login</h1>
-        <% } %>
-
-            <!-- Display flash messages -->
-            <%- messages() %>
-
-                <form action="/account/login" method="POST" class="login-form" id="loginForm">
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" name="account_email" placeholder="username or email" id="account_email"
-                            class="form-input" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="account_password">Password:</label>
-                        <input type="password" name="account_password" id="accountPassword" class="form-input" required>
-                    </div>
-                    <button type="submit" class="form-button">Login</button>
-                </form>
-
-                <p class="register-link">Don't have an account? <a href="/account/register">Sign-up</a></p>
+    <h1><%= title %></h1>
+    <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
+    <ul class="notice">
+      <% errors.array().forEach(error => { %>
+      <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+    <% } %>
+    
+    <div class="form-shape">
+      <form action="/account/login" method="post" id="loginForm">
+        <label
+          >Email:
+          <input
+            type="email"
+            name="account_email"
+            required
+            value="<%= locals.account_email %>"
+        /></label>
+        <label
+          >Password: <input type="password" name="account_password" required
+        /></label>
+        <button type="submit">Login</button>
+      </form>
+      <p>No account? <a href="/account/register">Sign-up</a></p>
+    </div>
