--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,7 +1,2 @@
-<% if (title) { %>
-  <h1><%= title %></h1>
-  <% } else {
-    res.redirect('/')
-  } %>
-
-  <%- message %>
+<h1><%= title %></h1>
+<p><%- message %></p>
