--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,27 +1,66 @@
-<% if (title) { %>
-    <h1><%= title %></h1>
-    <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
-    <ul class="notice">
-      <% errors.array().forEach(error => { %>
-      <li><%= error.msg %></li>
-      <% }) %>
-    </ul>
-    <% } %>
+<div class="form-container">
+    <% if (title) { %>
+        <h1><%= title %></h1>
+    <% } else {
+        res.redirect('/')
+    } %>
     
-    <div class="form-shape">
-      <form action="/account/login" method="post" id="loginForm">
-        <label
-          >Email:
-          <input
-            type="email"
-            name="account_email"
-            required
-            value="<%= locals.account_email %>"
-        /></label>
-        <label
-          >Password: <input type="password" name="account_password" required
-        /></label>
-        <button type="submit">Login</button>
-      </form>
-      <p>No account? <a href="/account/register">Sign-up</a></p>
-    </div>
+    <%- messages() %>
+
+    <% if (errors) {%>
+        <ul class="notice">
+            <% errors.array().forEach(error => { %>
+                <li><%= error.msg %></li>
+            <% }) %>
+        </ul>
+    <% } %>
+    <form id="loginForm" action="/account/login" method="post">
+        <div>
+            <label for="email" class="required">Email:</label><br>
+            <input 
+                type="email" 
+                id="email" 
+                name="account_email" 
+                value="<%= locals.account_email %>" 
+                placeholder="Enter your email address" 
+                required
+            />
+        </div>
+        
+        <div>
+            <label for="password" class="required">Password:</label><br>
+            <input 
+                type="password" 
+                id="password" 
+                name="account_password" 
+                placeholder="Create your password"  
+                required 
+                pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{12,}$"
+                title="Password must contain at least one uppercase letter, one number, one special character, and be at least 12 characters long."
+            />
+            <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character.</span>
+            <button type="button" id="toggleShowPW">Show Password</button>
+        </div>
+        
+        <div class="submit">
+            <input type="submit" value="LOGIN">
+        </div>
+    </form>
+    <div class="sign-up">No account? <span><a href="/account/register">Sign-up</a></span></div>
+</div>
+
+<script>
+    const toggleShowPW = document.getElementById('toggleShowPW');
+    toggleShowPW.addEventListener('click', () => {
+        const pwInput = document.getElementById('password');
+        const type = pwInput.getAttribute('type');
+
+        if (type === "password") {
+            pwInput.setAttribute('type', 'text');
+            toggleShowPW.innerHTML = "Hide Password";
+        } else {
+            pwInput.setAttribute('type', 'password');
+            toggleShowPW.innerHTML = 'Show Password';
+        }
+    });
+</script>
