--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -1,61 +1,59 @@
-<% if (title) { %>
-    <h1 class="inv-title">
-        <%= title %>
-    </h1>
-    <% } else { %>
-        <h1 class="inv-title">Add a New Vehicle</h1>
+<div id="add-inventory" class="form-container">
+    <h1><%= title %></h1>
+
+    <%- messages() %>
+
+    <form action="/inv/add-inventory" method="post">
+        <% if (errors ) { %>
+            <ul class="notice">
+                <% errors.array().forEach(error => { %>
+                    <li><%= error.msg %></li>
+                <% }) %> 
+            </ul>
         <% } %>
 
-            <% if (Array.isArray(messages) && messages.length> 0) { %>
-                <div class="flash-messages">
-                    <% messages.forEach(function(message) { %>
-                        <div class="flash-message notice">
-                            <p>
-                                <%= message %>
-                            </p>
-                        </div>
-                        <% }); %>
-                </div>
-                <% } %>
-
-                    <form action="/inv/add-vehicle" method="POST" class="inventory-form">
-                        <label for="classification" class="inventory-label">Classification:</label>
-                        <select class="inventory-select" id="classification" name="classificationId" required>
-                            <option value="">Choose a Classification</option>
-                            <% classifications.forEach(({ classification_id, classification_name })=> { %>
-                                <option value="<%= classification_id %>">
-                                    <%= classification_name %>
-                                </option>
-                                <% }) %>
-                        </select>
-                        <label for="make" class="inventory-label">Make:</label>
-                        <input class="inventory-input" type="text" id="make" name="inv_make" required minlength="3">
-
-                        <label for="model" class="inventory-label">Model:</label>
-                        <input class="inventory-input" type="text" id="model" name="inv_model" required minlength="3">
-
-                        <label for="year" class="inventory-label">Year:</label>
-                        <input class="inventory-input" type="number" id="year" name="inv_year" required min="1900"
-                            max="2024">
-
-                        <label for="description" class="inventory-label">Description:</label>
-                        <textarea class="inventory-textarea" id="description" name="inv_description"
-                            required></textarea>
-
-                        <label for="image" class="inventory-label">Image Path:</label>
-                        <input class="inventory-input" type="text" id="image" name="inv_image" required>
-
-                        <label for="thumbnail" class="inventory-label">Thumbnail Path:</label>
-                        <input class="inventory-input" type="text" id="thumbnail" name="inv_thumbnail" required>
-
-                        <label for="price" class="inventory-label">Price:</label>
-                        <input class="inventory-input" type="number" id="price" name="inv_price" required step="0.01">
-
-                        <label for="miles" class="inventory-label">Miles:</label>
-                        <input class="inventory-input" type="number" id="miles" name="inv_miles" required>
-
-                        <label for="color" class="inventory-label">Color:</label>
-                        <input class="inventory-input" type="text" id="color" name="inv_color" required>
-
-                        <button class="inventory-button" type="submit">Add Vehicle</button>
-                    </form>
+        <div>
+            <label for="classificationList" class="required">Classification</label><br>
+            <%- classificationSelect %>
+        </div>
+        <div>
+            <label for="inv_make" class="required">Make</label><br>
+            <input type="text" id="inv_make" name="inv_make" minlength="3" placeholder="Min of 3 characters" required value="<%= locals.inv_make %>">
+        </div>
+        <div>
+            <label for="inv_model" class="required">Model</label><br>
+            <input type="text" id="inv_model" name="inv_model" minlength="3" placeholder="Min of 3 characters" required value="<%= locals.inv_model %>">
+        </div>
+        <div>
+            <label for="inv_description" class="required">Description</label><br>
+            <textarea id="inv_description" name="inv_description" rows="3" required><%= locals.inv_description %></textarea>
+        </div>
+        <div>
+            <label for="inv_image" class="required">Image Path</label><br>
+            <input type="text" id="inv_image" name="inv_image" value="/images/vehicles/no-image.png" required>
+        </div>
+        <div>
+            <label for="inv_thumbnail" class="required">Thumbnail Path</label>
+            <input type="text" id="inv_thumbnail" name="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required>
+        </div>
+        <div>
+            <label for="inv_price" class="required">Price</label><br>
+            <input type="number" id="inv_price" name="inv_price" min="0" placeholder="decimal or integer" required value="<%= locals.inv_price %>">
+        </div>
+        <div>
+            <label for="inv_year" class="required">Year</label><br>
+            <input type="number" id="inv_year" name="inv_year" placeholder="4-digit year" min="1000" max="<%= new Date().getFullYear() %>" required value="<%= locals.inv_year %>">
+        </div>
+        <div>
+            <label for="inv_miles" class="required">Miles</label><br>
+            <input type="number" id="inv_miles" name="inv_miles" min="0" placeholder="digits only" required value="<%= locals.inv_miles %>">
+        </div>
+        <div>
+            <label for="inv_color" class="required">Color</label>
+            <input type="text" id="inv_color" name="inv_color" pattern="[A-Za-z\s]+" required value="<%= locals.inv_color %>">
+        </div>
+        <div class="submit">
+            <input type="submit" name="submit"  value="Add Vehicle">
+        </div>
+    </form>
+</div>
