--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,9 +1,12 @@
+<!-- The Content Heading -->
 <% if (title) { %>
   <h1><%= title %></h1>
   <% } else {
-    res.redirect('/')
+      res.redirect('/')
   } %>
-
+  
+  <!-- A Message Block -->
   <%# messages() %>
-
+  
+  <!-- The Inventory Items Display -->
   <%- grid %>
