--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,26 +1,25 @@
-
-<% if (title) { %>
+<div id="inventory-management">
     <h1><%= title %></h1>
-    <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
-    <ul class="notice">
-      <% errors.array().forEach(error => { %>
-      <li><%= error.msg %></li>
-      <% }) %>
-    </ul>
+    <%- messages() %>
+
+    <% if (errors) { %>
+        <ul class="notice">
+            <% errors.array().forEach(error => { %>
+                <li><%= error.msg %></li>
+            <% }) %>
+        </ul>
     <% } %>
-    
-    <div class="inv-menu">
-      <a href="/inv/add-classification">Add new classification</a>
-      <a href="/inv/add-inventory">Add new inventory</a>
-    </div>
+
+    <ul>
+        <li><a href="/inv/add-classification">Add New Classification</a></li>
+        <li><a href="/inv/add-inventory">Add New Vehicle</a></li>
+    </ul>
+
     <h2>Manage Inventory</h2>
-    <p>
-      Select a classification from the list to see the items belonging to the
-      classification
-    </p>
+    <p>Select a classification from the list to see the items belonging to the classification.</p>
     <%- classificationSelect %>
     <table id="inventoryDisplay"></table>
     <noscript>JavaScript must be enabled to use this page.</noscript>
-    
-    <script src="../../js/inventory.js"></script>
-    
+</div>
+
+<script src="../../js/inventory.js"></script>
