--- a/views/account/edit-account.ejs
+++ b/views/account/edit-account.ejs
@@ -1,21 +1,18 @@
-<!-- views/account/updateAccount.ejs -->
-
 <form action="/account/update" method="POST">
-    <div>
+  <div>
       <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" value="<%= firstName %>" required>
-    </div>
-    <div>
+      <input type="text" id="firstName" name="account_firstname" value="<%= account_firstname %>" required>
+  </div>
+  <div>
       <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" value="<%= lastName %>" required>
-    </div>
-    <div>
+      <input type="text" id="lastName" name="account_lastname" value="<%= account_lastname %>" required>
+  </div>
+  <div>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" value="<%= email %>" required>
-    </div>
-    <input type="hidden" name="accountId" value="<%= accountId %>">
-    <div>
+      <input type="email" id="email" name="account_email" value="<%= account_email %>" required>
+  </div>
+  <input type="hidden" name="account_id" value="<%= account_id %>">
+  <div>
       <input type="submit" value="Update Account">
-    </div>
-  </form>
-  
+  </div>
+</form>
