--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -2,11 +2,11 @@
     <% if (title) { %>
         <h1><%= title %></h1>
     <% } %>
-  
-    <h2>Welcome <%= account_firstname %></h2>
-    
+
+    <h2>Welcome <%= accountData.account_firstname %></h2> <!-- Use accountData for firstname -->
+
     <%- messages() %>
-    
+
     <% if (errors) { %>
         <ul class="notice">
             <% errors.array().forEach(error => { %>
@@ -14,16 +14,16 @@
             <% }) %>
         </ul>
     <% } %>
-  
+
     <%- link %>
     <br>
-  
+
     <h3>Message Center</h3>
     <ul>
         <li class="font-1">You have <%= unreadMsgNum %> unread messages</li>
         <li class="font-1">Go to <a href="/message/">Inbox</a></li>
     </ul>
-  
+
     <% if (accountData.account_type === "Employee" || accountData.account_type === "Admin") { %>
         <br>
         <div class="inv-management-container">
