started working on feedback

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,11 @@
         </ul>
     </div>
 
+    <div id="feedback-link">
+        <a href="/feedback/submit" title="Leave Feedback">Leave Feedback</a>
+    </div>
+    
+
     <div class="upgrades-card">
         <h2>Delorean Upgrades</h2>
         <div class="upgrades-images">
