--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,11 +22,14 @@
             <li>"The most futuristic ride of our day." (4.5/5)</li>
             <li>"80's livin and I love it!" (5/5)</li>
         </ul>
+        <p>
+            <a href="/feedback" class="hero-button">Leave Feedback</a>
+        
+            <a href="/feedback/view" class="hero-button">View All Feedback</a>
+        </p>
     </div>
 
-    <div id="feedback-link">
-        <a href="/feedback/submit" title="Leave Feedback">Leave Feedback</a>
-    </div>
+
     
 
     <div class="upgrades-card">
@@ -74,6 +77,7 @@
                         <span>Hub Caps</span>
                     </a>
                 </div>
+
             </div>
         </div>
     </div>
