--- a/views/feedback/feedback-view.ejs
+++ b/views/feedback/feedback-view.ejs
@@ -1,10 +1,16 @@
-<h1>Your Feedback</h1>
-<ul>
-    <% feedbacks.forEach(feedback => { %>
-        <li>
-            <strong>Rating:</strong> <%= feedback.rating %><br>
-            <strong>Comments:</strong> <%= feedback.comments %><br>
-            <strong>Submitted on:</strong> <%= new Date(feedback.created_at).toLocaleString() %>
-        </li>
-    <% }) %>
-</ul>
+<h1><%= title %></h1>
+
+<% if (feedbacks.length > 0) { %>
+    <ul>
+        <% feedbacks.forEach(feedback => { %>
+            <li>
+                <strong>Rating:</strong> <%= feedback.rating %><br>
+                <strong>Comments:</strong> <%= feedback.comments %><br>
+                <strong>Submitted on:</strong> <%= new Date(feedback.created_at).toLocaleString() %>
+            </li>
+            <hr>
+        <% }) %>
+    </ul>
+<% } else { %>
+    <p>No feedback available yet.</p>
+<% } %>
